# travel_task

./: .gitignore  db.sqlite3  pyproject.toml
core/: settings.py  urls.py
src/: admin.py  models.py
src/api/: serializers.py  urls.py  views.py
