[tool.poetry]
name = "travel_task"
version = "0.1.0"
description = "Technical Task with django and django rest framework"
authors = ["Jafar Huseynov <cefer.h2018@mail.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = ">=7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
